Fixing logo on mobile phones

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -364,7 +364,7 @@ body, html {
 }
 
 .mobile-logo {
-    max-width: 120px;
+    max-width: 57.24px;
     max-height: 57.24px;
     display: block;
     position: relative;
